<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>fp_andy_phuc</name>
  <version>0.1.0</version>
  <description>
    ROS package for performing quadtree vision and CBS
  </description>
  <maintainer email="class@class.edu">Class</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>
  <exec_depend>cbs</exec_depend>
</package>
